# Python_Testing

./: .coverage  .flake8  clubs.json  competitions.json  pyproject.toml  server.py
templates/: booking.html  clubs_points.html  index.html
tests/: conftest.py  fixtures.py  test_club_points.py  test_integration.py  test_purchase_places.py  test_show_summary.py
tests/integration/: test_integration.py
tests/unit/: test_club_points.py  test_show_summary.py
tests/unit_tests/: test_club_points.py  test_purchase_places.py  test_show_summary.py
