[tool.poetry]
name = "güdlft"
version = "0.1.0"
description = ""
authors = ["lethyxnekuia <maxguillemot@hotmail.fr>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = ">=3.8.1,<4.0"
requests = "^2.25.0"
click = "7.1.2"
Flask = "1.1.2"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
Werkzeug = "1.0.1"